<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_card">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wsbs_text_field"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:labelFor="@+id/wsbs_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/strength_text_field"
        app:layout_constraintEnd_toStartOf="@id/strength_text_field"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/strength_text_field">

        <AutoCompleteTextView
            android:id="@+id/wsbs_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            app:simpleItems="@array/wsbs_values"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/strength_text_field"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:hint="@string/textfield_hint_strength"
        android:labelFor="@+id/strength_edittext"
        app:layout_constraintEnd_toStartOf="@id/ap_text_field"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/wsbs_text_field"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/strength_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:maxLines="1"
            android:text="@string/edittext_default_value_strength" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ap_text_field"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:labelFor="@+id/ap_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/strength_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/strength_text_field"
        app:layout_constraintTop_toTopOf="@+id/strength_text_field">

        <AutoCompleteTextView
            android:id="@+id/ap_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            app:simpleItems="@array/ap_values"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/lethal_hits_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_text_lethal_hits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strength_text_field" />

    <CheckBox
        android:id="@+id/devastating_wounds_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/checkbox_text_devastating_wounds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lethal_hits_checkbox" />

    <CheckBox
        android:id="@+id/tohit_reroll_of_1_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/checkbox_text_hit_reroll_of_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devastating_wounds_checkbox" />

    <CheckBox
        android:id="@+id/tohit_reroll_full_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/checkbox_text_hit_full_reroll"
        app:layout_constraintStart_toEndOf="@+id/tohit_reroll_of_1_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/devastating_wounds_checkbox" />

    <CheckBox
        android:id="@+id/towound_reroll_of_1_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/checkbox_text_wound_reroll_of_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tohit_reroll_of_1_checkbox" />

    <CheckBox
        android:id="@+id/towound_reroll_full_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/checkbox_text_wound_full_reroll"
        app:layout_constraintStart_toEndOf="@+id/towound_reroll_of_1_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/tohit_reroll_of_1_checkbox" />

    <CheckBox
        android:id="@+id/towound_improve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/checkbox_text_improve_wound_roll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/towound_reroll_full_checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>